# my-opentelemetry

./: .gitignore  .gitmodules  Dockerfile  README.md  create_superuser.py  db.sqlite3  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  test_celery.py  test_celery_import.py
common_app/: urls.py  views.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: UserManagement.vue
myproject/: celery.py  middleware.py  opentelemetry_config.py  settings.py  urls.py  wsgi.py
mytask/: admin.py  apps.py  models.py  signals.py  tasks.py
mytask/migrations/: 0001_initial.py  0002_auto_20251223_0338.py
users/: admin.py  apps.py  exceptions.py  models.py  pydantic_schemas.py  serializers.py  services.py  signals.py  storage.py  tasks.py  urls.py  views.py
users/management/commands/: setup_rustfs_bucket.py
users/migrations/: 0001_initial.py
