[project]
name = "my-opentelemetry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "celery==4.3",
    "django==2.2",
    "redis==3.2",
    "djangorestframework==3.11",
    "Pillow>=8.0.0,<10.0.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-instrumentation-django>=0.50b0",
    "opentelemetry-instrumentation-celery>=0.50b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "mysqlclient>=2.1.0",
    "boto3>=1.42.17",
    "django-storages==1.11.1",
    "pydantic[email]>=2.12.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
